compiler/test-data/parser/blueprint/errors/missing_opening_brace.frel
module blueprint.errors.missing_opening_brace

blueprint Hello
    text { "Hello" }
}
